# rust-mcp-server

./: .gitignore  Cargo.toml  FIX_JSON_RPC_ERROR_FIELD.md  README.md  TESTING_SUMMARY.md  example_mcp_config.json  test_manual.py  test_server.py
src/: main.rs  mcp.rs  rust_tools.rs
