[package]
name = "rust-mcp-server"
version = "0.1.1"
edition = "2021"
authors = ["Claude Code"]
description = "A Model Context Protocol server for Rust development tools (clippy, rustfmt, cargo check, cargo test)"

[[bin]]
name = "rust-mcp-server"
path = "src/main.rs"

[dependencies]
# MCP Protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Process execution
tokio-process = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# File system operations
tempfile = "3.8"
regex = "1.9"